# HyperionBox

./: .env.development  .env.development.linux  .env.development.win  .gitignore  README.md  app.manifest.json  bin.manifest.json  eslint.config.js  index.html  manifest.json  package-lock.json  package.json  sign_android_apk.bat  snapcraft.yaml  tauri-driver.js  tsconfig.json  vite.config.ts
.github/workflows/: android-split.yml  android-universal.yml  jekyll-gh-pages.yml  linux-artifact.yml  linux.yml  snap-build.yml  snapcraft-artifact.yml  snapcraft-build.yml  static.yml  windows-artifact.yml  windows.yml
.tauri/: app.key  app.key.pub
@types/: node-webvtt.d.ts
extensions/source/: package-lock.json  package.json  route.js
extensions/source/hianime/: get_list.js  get_specific.js  main.js
extensions/sources/: route.js
snap/: snapcraft.yaml
snap/meta/: snapshots.yaml
snap_config/: snapshots.yaml
src/: App.css  App.tsx  index.tsx  main.tsx  types.ts
src-tauri/: .gitignore  2  Cargo.toml  latest.json  tauri.conf.json
src-tauri/capabilities/: android-package-install.json  default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  lib.rs  main.rs  test.rs
src-tauri/src/anime/: home.rs  mod.rs  models.rs  search.rs  view.rs
src-tauri/src/commands/: configs.rs  download.rs  favorite.rs  get_content.rs  link_plugin.rs  local_manifest.rs  manage_storage.rs  mod.rs  update.rs  watch_index.rs  watch_state.rs
src-tauri/src/commands/dialog/: mod.rs  pick_dir.rs
src-tauri/src/commands/favorite/: create_tag.rs
src-tauri/src/commands/hypersync/: favorite.rs  mod.rs  reset.rs  watch_state.rs
src-tauri/src/commands/manage_plugin/: get_installed_plugin_list.rs  get_plugin_list.rs  get_plugin_release.rs  install_plugin.rs  mod.rs  remove_plugin.rs
src-tauri/src/commands/methods/: home.rs  mod.rs  search.rs  view.rs  watch.rs
src-tauri/src/commands/request_plugin/: get_episode_list.rs  get_episode_server.rs  get_server.rs  mod.rs  search.rs  search_in_plugin.rs
src-tauri/src/models/: download.rs  home.rs  local_manifest.rs  mod.rs  search.rs  update.rs  view.rs  watch_state.rs
src-tauri/src/sources/: mod.rs
src-tauri/src/sources/anime/: home.rs  mod.rs  search.rs  view.rs
src-tauri/src/sources/movie/: home.rs  mod.rs  search.rs  view.rs
src-tauri/src/utils/: configs.rs  convert_file_src.rs  download_file.rs  get_appdata.rs  get_calendar.rs  mod.rs  url.rs
src-tauri/src/worker/: download.rs  favorite.rs  mod.rs  update_plugins.rs
src-tauri/src/worker/hypersync/: favorite.rs  mod.rs  watch_state.rs
src-tauri/src/worker/hypersync/favorite/: get.rs  upload.rs
src/Home/components/: main.tsx
src/[preview]/components/: custom_mui.tsx  main.tsx  manage_download_widget.tsx  remove_download_widget.tsx
src/[preview]/scripts/: get_preview.ts  get_preview.tsx  open_external.ts
src/[preview]/styles/: main.module.css  manage_download_widget.module.css  remove_download_widget.module.css
src/[watch]/components/: custom_mui.tsx  main.tsx  manage_translate_widget.tsx
src/[watch]/scripts/: get_watch.ts  get_watch.tsx  manage_watch_state.tsx  open_external.ts  reparse_local_hls.ts  rephrase_local_hls.ts  translate_array.ts  translate_caption.ts
src/[watch]/styles/: main.module.css  manage_translate_widget.module.css
src/app/components/: Select.tsx  app.tsx  grid_box.tsx  lazyloadimage.tsx  main.tsx  navigation_bar.tsx  pull_refresh.tsx  swiper.tsx  titlebar.tsx  update.tsx
src/app/scripts/: configs.ts  dialog.ts  horizontal_scroll.ts  initiate_extension.tsx  keys_event_listener.ts  keys_event_listener.tsx  load_config_options.ts  update.ts
src/app/styles/: app.css  grid_box.module.css  main.module.css  navigation_bar.module.css  pull_refresh.module.css  swiper.css  swiper.module.css  titlebar.module.css  update.module.css
src/app/types/: configs_type.ts  update_type.ts
src/app/worker/: download_task_worker.ts  start_download.ts
src/assets/media/: icon.json  logo.psd
src/download_task/components/: main.tsx  render_item.tsx
src/download_task/styles/: main.module.css  render_item.module.css
src/download_task/worker/: download_task_worker.ts  get_download_info.ts  manage_download.ts
src/downloads/components/: downloads.tsx
src/downloads/scripts/: downloads.ts
src/downloads/styles/: downloads.module.css
src/downloads/types/: downloads_type.ts
src/explore/components/: [browse_source].tsx  main.tsx
src/explore/scripts/: get_list.tsx
src/explore/styles/: browse_source.module.css  main.module.css
src/extension/components/: item.tsx  main.tsx
src/extension/scripts/: get_source.ts  install_source.ts
src/extension/styles/: main.module.css
src/favorite/components/: favorite.tsx
src/favorite/styles/: favorite.module.css
src/favorites/components/: favorites.tsx
src/favorites/scripts/: favorites.ts
src/favorites/styles/: favorites.module.css
src/favorites/types/: favorites.ts
src/global/components/: manage_download_widget.tsx  manage_tag_widget.tsx
src/global/script/: copy_recursive.tsx  download_file_in_chunck.tsx  download_file_in_chunk.tsx  excute_command.tsx  get_7z_path.tsx  get_extension_directory.tsx  get_extensions_directory.tsx  get_node_path.tsx  get_npm_path.tsx  get_platform_file_extensions.tsx  keys_event_listener.tsx  load_config_options.tsx  manage_extension_sources.tsx  request_create_tag.tsx  request_manage_tag.tsx  write_crash_log.tsx
src/global/scripts/: check_internet_connection.ts  contexts.ts  convert_master.ts  copy_recursive.ts  download_file_in_chunk.ts  download_file_in_chunk.tsx  excute_command.tsx  execute_command.tsx  generate_hls_from_playlist.tsx  (+25 more)
src/types/: semver.d.ts
(+100 files in other folders)
