[package]
name = "HyperionBox"
version = "2.0.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "hyperionbox_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[profile.release]
opt-level = 3 
lto = true 
strip = true
codegen-units = 1

[build-dependencies]
tauri-build = { version = "2", features = [] }



[dependencies]
chlaty-core = { git = "https://github.com/chlaty/chlaty-core", branch = "main" }

reqwest = { version = "0.12.23", default-features = false, features = ["rustls-tls", "json"] }
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1.0.225", features = ["derive"] }
serde_json = "1.0.145"
tokio = {version = "1.47.1", features = ["full"] }
visdom = "1.0.3"
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
dotenv = "0.15.0"
anyhow = "1.0.99"
thiserror = "2.0.16"
futures = "0.3.31"
tauri-plugin-os = "2"
chrono = "0.4.42"
parsidate = "1.7.1"
tauri-plugin-http = { version = "2", features = ["unsafe-headers"] }
urlencoding = "2.1.3"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-fs = "2"

