[package]
name = "HyperionBox"
version = "2.0.1"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "hyperionbox_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[profile.release]
opt-level = 3 
lto = true 
strip = false # Dynamic libloading will be bugged if set strip to `true`
codegen-units = 1

[build-dependencies]
tauri-build = { version = "2", features = [] }



[dependencies]
chlaty-core = { git = "https://github.com/chlaty/chlaty-core", branch = "main" }

reqwest = { version = "0.12.23", default-features = false, features = ["rustls-tls", "json", "stream"] }
tauri = { version = "2", features = ["protocol-asset", "macos-private-api"] }
tauri-plugin-opener = "2"
serde = { version = "1.0.225", features = ["derive"] }
serde_json = "1.0.145"
tokio = {version = "1.47.1", features = ["full"] }
visdom = "1.0.3"
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
dotenv = "0.15.0"
anyhow = "1.0.100"
thiserror = "2.0.16"
futures = "0.3.31"
tauri-plugin-os = "2"
chrono = "0.4.42"
parsidate = "1.7.1"
tauri-plugin-http = { version = "2", features = ["unsafe-headers"] }
urlencoding = "2.1.3"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-fs = "2"
rusqlite = { version = "0.37.0", features = ["bundled"] }
futures-util = "0.3.31"
m3u8-rs = "6.0.0"
bytes = "1.10.1"
url = "2.5.7"
dashmap = "6.1.0"
lazy_static = "1.5.0"
tauri-plugin-android-fs = "16.1.2"
tauri-plugin-dialog = "2"
dunce = "1.0.5"

[target.'cfg(target_os = "android")'.dependencies]
tauri-plugin-android-package-install = "2.0.2"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-single-instance = "2"
tauri-plugin-updater = "2"




